# sigenergy-nem-arb

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.sh
arb/: __init__.py
arb/actuator/: ha_control.py  sigen_modbus.py
arb/agent/: audit.py  explain.py  loop.py  plan_diff.py  spike_demo.py  spike_detector.py
arb/api/: __init__.py  server.py
arb/demo/: dashboard.py  data_loader.py
arb/eval/: amber_replay.py  backtest.py  baselines.py  generate_report.py  historical_spikes.py  offline_dryrun.py  report_template.html  run_backtest.py
arb/forecast/: builder.py  load.py  solar.py
arb/ingest/: aemo.py  amber.py  bom.py  ha.py  snapshot.py
arb/scheduler/: constants.py  greedy.py  plan.py
docs/: best_moments.md  demo_script.md  impact.md  postmortem_template.md  report.html
tests/: test_aemo.py  test_api.py  test_audit.py  test_backtest.py  test_baselines.py  test_constants.py  test_edge_cases.py  test_explain.py  test_forecast.py  test_generate_report.py  test_greedy.py  test_hardening.py  test_plan.py  test_plan_diff.py  test_spike_demo.py  test_spike_detector.py
web/: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/replan/: layout.tsx  page.tsx
web/components/dashboard/: BacktestTable.tsx  CurrentStatus.tsx  DataQuality.tsx  PricePanel.tsx  RationaleFeed.tsx  ReplanSection.tsx  SOCPanel.tsx  SpikeDemoButton.tsx
web/components/layout/: Header.tsx
web/hooks/: useLiveData.ts
web/lib/: api.ts  design-tokens.ts  utils.ts
(+12 files in other folders)
